fix title alignment

--- a/arches_her/media/css/project.css
+++ b/arches_her/media/css/project.css
@@ -1007,6 +1007,11 @@ span.rp-tile-title {
     padding: 20px;
 }
 
+.bng-search-container .filter-title {
+    margin-top: 3px;
+    margin-bottom: 15px;
+}
+
 .bng-search-map {
     padding: 0px;
     height: 400px;
